parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> stmt
Rule 2     main -> stmt main
Rule 3     stmt -> var
Rule 4     stmt -> push
Rule 5     stmt -> pop
Rule 6     stmt -> kw
Rule 7     stmt -> kw_name
Rule 8     var -> KW_VAR var_type NAME
Rule 9     var_type -> KW_INT
Rule 10    var_type -> KW_CHAR
Rule 11    var_type -> KW_ARR CH_LBRACKET var_type CH_RBRACKET
Rule 12    push -> KW_PUSH NAME
Rule 13    push -> KW_PUSH INT_VALUE
Rule 14    push -> KW_PUSH CHAR_VALUE
Rule 15    pop -> KW_POP
Rule 16    pop -> KW_POP INT_VALUE
Rule 17    kw -> KW_RET
Rule 18    kw -> KW_ADD
Rule 19    kw -> KW_SUB
Rule 20    kw -> KW_MUL
Rule 21    kw -> KW_DIV
Rule 22    kw -> KW_DUP
Rule 23    kw -> KW_SWAP
Rule 24    kw -> KW_PRINTTOP
Rule 25    kw -> KW_PRINTSTACK
Rule 26    kw_name -> KW_LBL NAME
Rule 27    kw_name -> KW_CALL NAME
Rule 28    kw_name -> KW_JMP NAME
Rule 29    kw_name -> KW_JE NAME
Rule 30    kw_name -> KW_JNE NAME
Rule 31    kw_name -> KW_JG NAME
Rule 32    kw_name -> KW_JGE NAME
Rule 33    kw_name -> KW_JL NAME
Rule 34    kw_name -> KW_JLE NAME
Rule 35    kw_name -> KW_ARRPUSH NAME
Rule 36    kw_name -> KW_ARRPOP NAME
Rule 37    kw_name -> KW_ARRGET NAME
Rule 38    kw_name -> KW_ARRSET NAME
Rule 39    kw_name -> KW_VARSET NAME
Rule 40    kw_name -> KW_VARDEL NAME

Terminals, with rules where they appear

CHAR_VALUE           : 14
CH_LBRACKET          : 11
CH_RBRACKET          : 11
INT_VALUE            : 13 16
KW_ADD               : 18
KW_ARR               : 11
KW_ARRGET            : 37
KW_ARRPOP            : 36
KW_ARRPUSH           : 35
KW_ARRSET            : 38
KW_CALL              : 27
KW_CHAR              : 10
KW_DIV               : 21
KW_DUP               : 22
KW_INT               : 9
KW_JE                : 29
KW_JG                : 31
KW_JGE               : 32
KW_JL                : 33
KW_JLE               : 34
KW_JMP               : 28
KW_JNE               : 30
KW_LBL               : 26
KW_MUL               : 20
KW_POP               : 15 16
KW_PRINTSTACK        : 25
KW_PRINTTOP          : 24
KW_PUSH              : 12 13 14
KW_RET               : 17
KW_SUB               : 19
KW_SWAP              : 23
KW_VAR               : 8
KW_VARDEL            : 40
KW_VARSET            : 39
NAME                 : 8 12 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
error                : 

Nonterminals, with rules where they appear

kw                   : 6
kw_name              : 7
main                 : 2 0
pop                  : 5
push                 : 4
stmt                 : 1 2
var                  : 3
var_type             : 8 11

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . stmt
    (2) main -> . stmt main
    (3) stmt -> . var
    (4) stmt -> . push
    (5) stmt -> . pop
    (6) stmt -> . kw
    (7) stmt -> . kw_name
    (8) var -> . KW_VAR var_type NAME
    (12) push -> . KW_PUSH NAME
    (13) push -> . KW_PUSH INT_VALUE
    (14) push -> . KW_PUSH CHAR_VALUE
    (15) pop -> . KW_POP
    (16) pop -> . KW_POP INT_VALUE
    (17) kw -> . KW_RET
    (18) kw -> . KW_ADD
    (19) kw -> . KW_SUB
    (20) kw -> . KW_MUL
    (21) kw -> . KW_DIV
    (22) kw -> . KW_DUP
    (23) kw -> . KW_SWAP
    (24) kw -> . KW_PRINTTOP
    (25) kw -> . KW_PRINTSTACK
    (26) kw_name -> . KW_LBL NAME
    (27) kw_name -> . KW_CALL NAME
    (28) kw_name -> . KW_JMP NAME
    (29) kw_name -> . KW_JE NAME
    (30) kw_name -> . KW_JNE NAME
    (31) kw_name -> . KW_JG NAME
    (32) kw_name -> . KW_JGE NAME
    (33) kw_name -> . KW_JL NAME
    (34) kw_name -> . KW_JLE NAME
    (35) kw_name -> . KW_ARRPUSH NAME
    (36) kw_name -> . KW_ARRPOP NAME
    (37) kw_name -> . KW_ARRGET NAME
    (38) kw_name -> . KW_ARRSET NAME
    (39) kw_name -> . KW_VARSET NAME
    (40) kw_name -> . KW_VARDEL NAME

    KW_VAR          shift and go to state 8
    KW_PUSH         shift and go to state 9
    KW_POP          shift and go to state 10
    KW_RET          shift and go to state 11
    KW_ADD          shift and go to state 12
    KW_SUB          shift and go to state 13
    KW_MUL          shift and go to state 14
    KW_DIV          shift and go to state 15
    KW_DUP          shift and go to state 16
    KW_SWAP         shift and go to state 17
    KW_PRINTTOP     shift and go to state 18
    KW_PRINTSTACK   shift and go to state 19
    KW_LBL          shift and go to state 20
    KW_CALL         shift and go to state 21
    KW_JMP          shift and go to state 22
    KW_JE           shift and go to state 23
    KW_JNE          shift and go to state 24
    KW_JG           shift and go to state 25
    KW_JGE          shift and go to state 26
    KW_JL           shift and go to state 27
    KW_JLE          shift and go to state 28
    KW_ARRPUSH      shift and go to state 29
    KW_ARRPOP       shift and go to state 30
    KW_ARRGET       shift and go to state 31
    KW_ARRSET       shift and go to state 32
    KW_VARSET       shift and go to state 33
    KW_VARDEL       shift and go to state 34

    main                           shift and go to state 1
    stmt                           shift and go to state 2
    var                            shift and go to state 3
    push                           shift and go to state 4
    pop                            shift and go to state 5
    kw                             shift and go to state 6
    kw_name                        shift and go to state 7

state 1

    (0) S' -> main .



state 2

    (1) main -> stmt .
    (2) main -> stmt . main
    (1) main -> . stmt
    (2) main -> . stmt main
    (3) stmt -> . var
    (4) stmt -> . push
    (5) stmt -> . pop
    (6) stmt -> . kw
    (7) stmt -> . kw_name
    (8) var -> . KW_VAR var_type NAME
    (12) push -> . KW_PUSH NAME
    (13) push -> . KW_PUSH INT_VALUE
    (14) push -> . KW_PUSH CHAR_VALUE
    (15) pop -> . KW_POP
    (16) pop -> . KW_POP INT_VALUE
    (17) kw -> . KW_RET
    (18) kw -> . KW_ADD
    (19) kw -> . KW_SUB
    (20) kw -> . KW_MUL
    (21) kw -> . KW_DIV
    (22) kw -> . KW_DUP
    (23) kw -> . KW_SWAP
    (24) kw -> . KW_PRINTTOP
    (25) kw -> . KW_PRINTSTACK
    (26) kw_name -> . KW_LBL NAME
    (27) kw_name -> . KW_CALL NAME
    (28) kw_name -> . KW_JMP NAME
    (29) kw_name -> . KW_JE NAME
    (30) kw_name -> . KW_JNE NAME
    (31) kw_name -> . KW_JG NAME
    (32) kw_name -> . KW_JGE NAME
    (33) kw_name -> . KW_JL NAME
    (34) kw_name -> . KW_JLE NAME
    (35) kw_name -> . KW_ARRPUSH NAME
    (36) kw_name -> . KW_ARRPOP NAME
    (37) kw_name -> . KW_ARRGET NAME
    (38) kw_name -> . KW_ARRSET NAME
    (39) kw_name -> . KW_VARSET NAME
    (40) kw_name -> . KW_VARDEL NAME

    $end            reduce using rule 1 (main -> stmt .)
    KW_VAR          shift and go to state 8
    KW_PUSH         shift and go to state 9
    KW_POP          shift and go to state 10
    KW_RET          shift and go to state 11
    KW_ADD          shift and go to state 12
    KW_SUB          shift and go to state 13
    KW_MUL          shift and go to state 14
    KW_DIV          shift and go to state 15
    KW_DUP          shift and go to state 16
    KW_SWAP         shift and go to state 17
    KW_PRINTTOP     shift and go to state 18
    KW_PRINTSTACK   shift and go to state 19
    KW_LBL          shift and go to state 20
    KW_CALL         shift and go to state 21
    KW_JMP          shift and go to state 22
    KW_JE           shift and go to state 23
    KW_JNE          shift and go to state 24
    KW_JG           shift and go to state 25
    KW_JGE          shift and go to state 26
    KW_JL           shift and go to state 27
    KW_JLE          shift and go to state 28
    KW_ARRPUSH      shift and go to state 29
    KW_ARRPOP       shift and go to state 30
    KW_ARRGET       shift and go to state 31
    KW_ARRSET       shift and go to state 32
    KW_VARSET       shift and go to state 33
    KW_VARDEL       shift and go to state 34

    stmt                           shift and go to state 2
    main                           shift and go to state 35
    var                            shift and go to state 3
    push                           shift and go to state 4
    pop                            shift and go to state 5
    kw                             shift and go to state 6
    kw_name                        shift and go to state 7

state 3

    (3) stmt -> var .

    KW_VAR          reduce using rule 3 (stmt -> var .)
    KW_PUSH         reduce using rule 3 (stmt -> var .)
    KW_POP          reduce using rule 3 (stmt -> var .)
    KW_RET          reduce using rule 3 (stmt -> var .)
    KW_ADD          reduce using rule 3 (stmt -> var .)
    KW_SUB          reduce using rule 3 (stmt -> var .)
    KW_MUL          reduce using rule 3 (stmt -> var .)
    KW_DIV          reduce using rule 3 (stmt -> var .)
    KW_DUP          reduce using rule 3 (stmt -> var .)
    KW_SWAP         reduce using rule 3 (stmt -> var .)
    KW_PRINTTOP     reduce using rule 3 (stmt -> var .)
    KW_PRINTSTACK   reduce using rule 3 (stmt -> var .)
    KW_LBL          reduce using rule 3 (stmt -> var .)
    KW_CALL         reduce using rule 3 (stmt -> var .)
    KW_JMP          reduce using rule 3 (stmt -> var .)
    KW_JE           reduce using rule 3 (stmt -> var .)
    KW_JNE          reduce using rule 3 (stmt -> var .)
    KW_JG           reduce using rule 3 (stmt -> var .)
    KW_JGE          reduce using rule 3 (stmt -> var .)
    KW_JL           reduce using rule 3 (stmt -> var .)
    KW_JLE          reduce using rule 3 (stmt -> var .)
    KW_ARRPUSH      reduce using rule 3 (stmt -> var .)
    KW_ARRPOP       reduce using rule 3 (stmt -> var .)
    KW_ARRGET       reduce using rule 3 (stmt -> var .)
    KW_ARRSET       reduce using rule 3 (stmt -> var .)
    KW_VARSET       reduce using rule 3 (stmt -> var .)
    KW_VARDEL       reduce using rule 3 (stmt -> var .)
    $end            reduce using rule 3 (stmt -> var .)


state 4

    (4) stmt -> push .

    KW_VAR          reduce using rule 4 (stmt -> push .)
    KW_PUSH         reduce using rule 4 (stmt -> push .)
    KW_POP          reduce using rule 4 (stmt -> push .)
    KW_RET          reduce using rule 4 (stmt -> push .)
    KW_ADD          reduce using rule 4 (stmt -> push .)
    KW_SUB          reduce using rule 4 (stmt -> push .)
    KW_MUL          reduce using rule 4 (stmt -> push .)
    KW_DIV          reduce using rule 4 (stmt -> push .)
    KW_DUP          reduce using rule 4 (stmt -> push .)
    KW_SWAP         reduce using rule 4 (stmt -> push .)
    KW_PRINTTOP     reduce using rule 4 (stmt -> push .)
    KW_PRINTSTACK   reduce using rule 4 (stmt -> push .)
    KW_LBL          reduce using rule 4 (stmt -> push .)
    KW_CALL         reduce using rule 4 (stmt -> push .)
    KW_JMP          reduce using rule 4 (stmt -> push .)
    KW_JE           reduce using rule 4 (stmt -> push .)
    KW_JNE          reduce using rule 4 (stmt -> push .)
    KW_JG           reduce using rule 4 (stmt -> push .)
    KW_JGE          reduce using rule 4 (stmt -> push .)
    KW_JL           reduce using rule 4 (stmt -> push .)
    KW_JLE          reduce using rule 4 (stmt -> push .)
    KW_ARRPUSH      reduce using rule 4 (stmt -> push .)
    KW_ARRPOP       reduce using rule 4 (stmt -> push .)
    KW_ARRGET       reduce using rule 4 (stmt -> push .)
    KW_ARRSET       reduce using rule 4 (stmt -> push .)
    KW_VARSET       reduce using rule 4 (stmt -> push .)
    KW_VARDEL       reduce using rule 4 (stmt -> push .)
    $end            reduce using rule 4 (stmt -> push .)


state 5

    (5) stmt -> pop .

    KW_VAR          reduce using rule 5 (stmt -> pop .)
    KW_PUSH         reduce using rule 5 (stmt -> pop .)
    KW_POP          reduce using rule 5 (stmt -> pop .)
    KW_RET          reduce using rule 5 (stmt -> pop .)
    KW_ADD          reduce using rule 5 (stmt -> pop .)
    KW_SUB          reduce using rule 5 (stmt -> pop .)
    KW_MUL          reduce using rule 5 (stmt -> pop .)
    KW_DIV          reduce using rule 5 (stmt -> pop .)
    KW_DUP          reduce using rule 5 (stmt -> pop .)
    KW_SWAP         reduce using rule 5 (stmt -> pop .)
    KW_PRINTTOP     reduce using rule 5 (stmt -> pop .)
    KW_PRINTSTACK   reduce using rule 5 (stmt -> pop .)
    KW_LBL          reduce using rule 5 (stmt -> pop .)
    KW_CALL         reduce using rule 5 (stmt -> pop .)
    KW_JMP          reduce using rule 5 (stmt -> pop .)
    KW_JE           reduce using rule 5 (stmt -> pop .)
    KW_JNE          reduce using rule 5 (stmt -> pop .)
    KW_JG           reduce using rule 5 (stmt -> pop .)
    KW_JGE          reduce using rule 5 (stmt -> pop .)
    KW_JL           reduce using rule 5 (stmt -> pop .)
    KW_JLE          reduce using rule 5 (stmt -> pop .)
    KW_ARRPUSH      reduce using rule 5 (stmt -> pop .)
    KW_ARRPOP       reduce using rule 5 (stmt -> pop .)
    KW_ARRGET       reduce using rule 5 (stmt -> pop .)
    KW_ARRSET       reduce using rule 5 (stmt -> pop .)
    KW_VARSET       reduce using rule 5 (stmt -> pop .)
    KW_VARDEL       reduce using rule 5 (stmt -> pop .)
    $end            reduce using rule 5 (stmt -> pop .)


state 6

    (6) stmt -> kw .

    KW_VAR          reduce using rule 6 (stmt -> kw .)
    KW_PUSH         reduce using rule 6 (stmt -> kw .)
    KW_POP          reduce using rule 6 (stmt -> kw .)
    KW_RET          reduce using rule 6 (stmt -> kw .)
    KW_ADD          reduce using rule 6 (stmt -> kw .)
    KW_SUB          reduce using rule 6 (stmt -> kw .)
    KW_MUL          reduce using rule 6 (stmt -> kw .)
    KW_DIV          reduce using rule 6 (stmt -> kw .)
    KW_DUP          reduce using rule 6 (stmt -> kw .)
    KW_SWAP         reduce using rule 6 (stmt -> kw .)
    KW_PRINTTOP     reduce using rule 6 (stmt -> kw .)
    KW_PRINTSTACK   reduce using rule 6 (stmt -> kw .)
    KW_LBL          reduce using rule 6 (stmt -> kw .)
    KW_CALL         reduce using rule 6 (stmt -> kw .)
    KW_JMP          reduce using rule 6 (stmt -> kw .)
    KW_JE           reduce using rule 6 (stmt -> kw .)
    KW_JNE          reduce using rule 6 (stmt -> kw .)
    KW_JG           reduce using rule 6 (stmt -> kw .)
    KW_JGE          reduce using rule 6 (stmt -> kw .)
    KW_JL           reduce using rule 6 (stmt -> kw .)
    KW_JLE          reduce using rule 6 (stmt -> kw .)
    KW_ARRPUSH      reduce using rule 6 (stmt -> kw .)
    KW_ARRPOP       reduce using rule 6 (stmt -> kw .)
    KW_ARRGET       reduce using rule 6 (stmt -> kw .)
    KW_ARRSET       reduce using rule 6 (stmt -> kw .)
    KW_VARSET       reduce using rule 6 (stmt -> kw .)
    KW_VARDEL       reduce using rule 6 (stmt -> kw .)
    $end            reduce using rule 6 (stmt -> kw .)


state 7

    (7) stmt -> kw_name .

    KW_VAR          reduce using rule 7 (stmt -> kw_name .)
    KW_PUSH         reduce using rule 7 (stmt -> kw_name .)
    KW_POP          reduce using rule 7 (stmt -> kw_name .)
    KW_RET          reduce using rule 7 (stmt -> kw_name .)
    KW_ADD          reduce using rule 7 (stmt -> kw_name .)
    KW_SUB          reduce using rule 7 (stmt -> kw_name .)
    KW_MUL          reduce using rule 7 (stmt -> kw_name .)
    KW_DIV          reduce using rule 7 (stmt -> kw_name .)
    KW_DUP          reduce using rule 7 (stmt -> kw_name .)
    KW_SWAP         reduce using rule 7 (stmt -> kw_name .)
    KW_PRINTTOP     reduce using rule 7 (stmt -> kw_name .)
    KW_PRINTSTACK   reduce using rule 7 (stmt -> kw_name .)
    KW_LBL          reduce using rule 7 (stmt -> kw_name .)
    KW_CALL         reduce using rule 7 (stmt -> kw_name .)
    KW_JMP          reduce using rule 7 (stmt -> kw_name .)
    KW_JE           reduce using rule 7 (stmt -> kw_name .)
    KW_JNE          reduce using rule 7 (stmt -> kw_name .)
    KW_JG           reduce using rule 7 (stmt -> kw_name .)
    KW_JGE          reduce using rule 7 (stmt -> kw_name .)
    KW_JL           reduce using rule 7 (stmt -> kw_name .)
    KW_JLE          reduce using rule 7 (stmt -> kw_name .)
    KW_ARRPUSH      reduce using rule 7 (stmt -> kw_name .)
    KW_ARRPOP       reduce using rule 7 (stmt -> kw_name .)
    KW_ARRGET       reduce using rule 7 (stmt -> kw_name .)
    KW_ARRSET       reduce using rule 7 (stmt -> kw_name .)
    KW_VARSET       reduce using rule 7 (stmt -> kw_name .)
    KW_VARDEL       reduce using rule 7 (stmt -> kw_name .)
    $end            reduce using rule 7 (stmt -> kw_name .)


state 8

    (8) var -> KW_VAR . var_type NAME
    (9) var_type -> . KW_INT
    (10) var_type -> . KW_CHAR
    (11) var_type -> . KW_ARR CH_LBRACKET var_type CH_RBRACKET

    KW_INT          shift and go to state 37
    KW_CHAR         shift and go to state 38
    KW_ARR          shift and go to state 39

    var_type                       shift and go to state 36

state 9

    (12) push -> KW_PUSH . NAME
    (13) push -> KW_PUSH . INT_VALUE
    (14) push -> KW_PUSH . CHAR_VALUE

    NAME            shift and go to state 40
    INT_VALUE       shift and go to state 41
    CHAR_VALUE      shift and go to state 42


state 10

    (15) pop -> KW_POP .
    (16) pop -> KW_POP . INT_VALUE

    KW_VAR          reduce using rule 15 (pop -> KW_POP .)
    KW_PUSH         reduce using rule 15 (pop -> KW_POP .)
    KW_POP          reduce using rule 15 (pop -> KW_POP .)
    KW_RET          reduce using rule 15 (pop -> KW_POP .)
    KW_ADD          reduce using rule 15 (pop -> KW_POP .)
    KW_SUB          reduce using rule 15 (pop -> KW_POP .)
    KW_MUL          reduce using rule 15 (pop -> KW_POP .)
    KW_DIV          reduce using rule 15 (pop -> KW_POP .)
    KW_DUP          reduce using rule 15 (pop -> KW_POP .)
    KW_SWAP         reduce using rule 15 (pop -> KW_POP .)
    KW_PRINTTOP     reduce using rule 15 (pop -> KW_POP .)
    KW_PRINTSTACK   reduce using rule 15 (pop -> KW_POP .)
    KW_LBL          reduce using rule 15 (pop -> KW_POP .)
    KW_CALL         reduce using rule 15 (pop -> KW_POP .)
    KW_JMP          reduce using rule 15 (pop -> KW_POP .)
    KW_JE           reduce using rule 15 (pop -> KW_POP .)
    KW_JNE          reduce using rule 15 (pop -> KW_POP .)
    KW_JG           reduce using rule 15 (pop -> KW_POP .)
    KW_JGE          reduce using rule 15 (pop -> KW_POP .)
    KW_JL           reduce using rule 15 (pop -> KW_POP .)
    KW_JLE          reduce using rule 15 (pop -> KW_POP .)
    KW_ARRPUSH      reduce using rule 15 (pop -> KW_POP .)
    KW_ARRPOP       reduce using rule 15 (pop -> KW_POP .)
    KW_ARRGET       reduce using rule 15 (pop -> KW_POP .)
    KW_ARRSET       reduce using rule 15 (pop -> KW_POP .)
    KW_VARSET       reduce using rule 15 (pop -> KW_POP .)
    KW_VARDEL       reduce using rule 15 (pop -> KW_POP .)
    $end            reduce using rule 15 (pop -> KW_POP .)
    INT_VALUE       shift and go to state 43


state 11

    (17) kw -> KW_RET .

    KW_VAR          reduce using rule 17 (kw -> KW_RET .)
    KW_PUSH         reduce using rule 17 (kw -> KW_RET .)
    KW_POP          reduce using rule 17 (kw -> KW_RET .)
    KW_RET          reduce using rule 17 (kw -> KW_RET .)
    KW_ADD          reduce using rule 17 (kw -> KW_RET .)
    KW_SUB          reduce using rule 17 (kw -> KW_RET .)
    KW_MUL          reduce using rule 17 (kw -> KW_RET .)
    KW_DIV          reduce using rule 17 (kw -> KW_RET .)
    KW_DUP          reduce using rule 17 (kw -> KW_RET .)
    KW_SWAP         reduce using rule 17 (kw -> KW_RET .)
    KW_PRINTTOP     reduce using rule 17 (kw -> KW_RET .)
    KW_PRINTSTACK   reduce using rule 17 (kw -> KW_RET .)
    KW_LBL          reduce using rule 17 (kw -> KW_RET .)
    KW_CALL         reduce using rule 17 (kw -> KW_RET .)
    KW_JMP          reduce using rule 17 (kw -> KW_RET .)
    KW_JE           reduce using rule 17 (kw -> KW_RET .)
    KW_JNE          reduce using rule 17 (kw -> KW_RET .)
    KW_JG           reduce using rule 17 (kw -> KW_RET .)
    KW_JGE          reduce using rule 17 (kw -> KW_RET .)
    KW_JL           reduce using rule 17 (kw -> KW_RET .)
    KW_JLE          reduce using rule 17 (kw -> KW_RET .)
    KW_ARRPUSH      reduce using rule 17 (kw -> KW_RET .)
    KW_ARRPOP       reduce using rule 17 (kw -> KW_RET .)
    KW_ARRGET       reduce using rule 17 (kw -> KW_RET .)
    KW_ARRSET       reduce using rule 17 (kw -> KW_RET .)
    KW_VARSET       reduce using rule 17 (kw -> KW_RET .)
    KW_VARDEL       reduce using rule 17 (kw -> KW_RET .)
    $end            reduce using rule 17 (kw -> KW_RET .)


state 12

    (18) kw -> KW_ADD .

    KW_VAR          reduce using rule 18 (kw -> KW_ADD .)
    KW_PUSH         reduce using rule 18 (kw -> KW_ADD .)
    KW_POP          reduce using rule 18 (kw -> KW_ADD .)
    KW_RET          reduce using rule 18 (kw -> KW_ADD .)
    KW_ADD          reduce using rule 18 (kw -> KW_ADD .)
    KW_SUB          reduce using rule 18 (kw -> KW_ADD .)
    KW_MUL          reduce using rule 18 (kw -> KW_ADD .)
    KW_DIV          reduce using rule 18 (kw -> KW_ADD .)
    KW_DUP          reduce using rule 18 (kw -> KW_ADD .)
    KW_SWAP         reduce using rule 18 (kw -> KW_ADD .)
    KW_PRINTTOP     reduce using rule 18 (kw -> KW_ADD .)
    KW_PRINTSTACK   reduce using rule 18 (kw -> KW_ADD .)
    KW_LBL          reduce using rule 18 (kw -> KW_ADD .)
    KW_CALL         reduce using rule 18 (kw -> KW_ADD .)
    KW_JMP          reduce using rule 18 (kw -> KW_ADD .)
    KW_JE           reduce using rule 18 (kw -> KW_ADD .)
    KW_JNE          reduce using rule 18 (kw -> KW_ADD .)
    KW_JG           reduce using rule 18 (kw -> KW_ADD .)
    KW_JGE          reduce using rule 18 (kw -> KW_ADD .)
    KW_JL           reduce using rule 18 (kw -> KW_ADD .)
    KW_JLE          reduce using rule 18 (kw -> KW_ADD .)
    KW_ARRPUSH      reduce using rule 18 (kw -> KW_ADD .)
    KW_ARRPOP       reduce using rule 18 (kw -> KW_ADD .)
    KW_ARRGET       reduce using rule 18 (kw -> KW_ADD .)
    KW_ARRSET       reduce using rule 18 (kw -> KW_ADD .)
    KW_VARSET       reduce using rule 18 (kw -> KW_ADD .)
    KW_VARDEL       reduce using rule 18 (kw -> KW_ADD .)
    $end            reduce using rule 18 (kw -> KW_ADD .)


state 13

    (19) kw -> KW_SUB .

    KW_VAR          reduce using rule 19 (kw -> KW_SUB .)
    KW_PUSH         reduce using rule 19 (kw -> KW_SUB .)
    KW_POP          reduce using rule 19 (kw -> KW_SUB .)
    KW_RET          reduce using rule 19 (kw -> KW_SUB .)
    KW_ADD          reduce using rule 19 (kw -> KW_SUB .)
    KW_SUB          reduce using rule 19 (kw -> KW_SUB .)
    KW_MUL          reduce using rule 19 (kw -> KW_SUB .)
    KW_DIV          reduce using rule 19 (kw -> KW_SUB .)
    KW_DUP          reduce using rule 19 (kw -> KW_SUB .)
    KW_SWAP         reduce using rule 19 (kw -> KW_SUB .)
    KW_PRINTTOP     reduce using rule 19 (kw -> KW_SUB .)
    KW_PRINTSTACK   reduce using rule 19 (kw -> KW_SUB .)
    KW_LBL          reduce using rule 19 (kw -> KW_SUB .)
    KW_CALL         reduce using rule 19 (kw -> KW_SUB .)
    KW_JMP          reduce using rule 19 (kw -> KW_SUB .)
    KW_JE           reduce using rule 19 (kw -> KW_SUB .)
    KW_JNE          reduce using rule 19 (kw -> KW_SUB .)
    KW_JG           reduce using rule 19 (kw -> KW_SUB .)
    KW_JGE          reduce using rule 19 (kw -> KW_SUB .)
    KW_JL           reduce using rule 19 (kw -> KW_SUB .)
    KW_JLE          reduce using rule 19 (kw -> KW_SUB .)
    KW_ARRPUSH      reduce using rule 19 (kw -> KW_SUB .)
    KW_ARRPOP       reduce using rule 19 (kw -> KW_SUB .)
    KW_ARRGET       reduce using rule 19 (kw -> KW_SUB .)
    KW_ARRSET       reduce using rule 19 (kw -> KW_SUB .)
    KW_VARSET       reduce using rule 19 (kw -> KW_SUB .)
    KW_VARDEL       reduce using rule 19 (kw -> KW_SUB .)
    $end            reduce using rule 19 (kw -> KW_SUB .)


state 14

    (20) kw -> KW_MUL .

    KW_VAR          reduce using rule 20 (kw -> KW_MUL .)
    KW_PUSH         reduce using rule 20 (kw -> KW_MUL .)
    KW_POP          reduce using rule 20 (kw -> KW_MUL .)
    KW_RET          reduce using rule 20 (kw -> KW_MUL .)
    KW_ADD          reduce using rule 20 (kw -> KW_MUL .)
    KW_SUB          reduce using rule 20 (kw -> KW_MUL .)
    KW_MUL          reduce using rule 20 (kw -> KW_MUL .)
    KW_DIV          reduce using rule 20 (kw -> KW_MUL .)
    KW_DUP          reduce using rule 20 (kw -> KW_MUL .)
    KW_SWAP         reduce using rule 20 (kw -> KW_MUL .)
    KW_PRINTTOP     reduce using rule 20 (kw -> KW_MUL .)
    KW_PRINTSTACK   reduce using rule 20 (kw -> KW_MUL .)
    KW_LBL          reduce using rule 20 (kw -> KW_MUL .)
    KW_CALL         reduce using rule 20 (kw -> KW_MUL .)
    KW_JMP          reduce using rule 20 (kw -> KW_MUL .)
    KW_JE           reduce using rule 20 (kw -> KW_MUL .)
    KW_JNE          reduce using rule 20 (kw -> KW_MUL .)
    KW_JG           reduce using rule 20 (kw -> KW_MUL .)
    KW_JGE          reduce using rule 20 (kw -> KW_MUL .)
    KW_JL           reduce using rule 20 (kw -> KW_MUL .)
    KW_JLE          reduce using rule 20 (kw -> KW_MUL .)
    KW_ARRPUSH      reduce using rule 20 (kw -> KW_MUL .)
    KW_ARRPOP       reduce using rule 20 (kw -> KW_MUL .)
    KW_ARRGET       reduce using rule 20 (kw -> KW_MUL .)
    KW_ARRSET       reduce using rule 20 (kw -> KW_MUL .)
    KW_VARSET       reduce using rule 20 (kw -> KW_MUL .)
    KW_VARDEL       reduce using rule 20 (kw -> KW_MUL .)
    $end            reduce using rule 20 (kw -> KW_MUL .)


state 15

    (21) kw -> KW_DIV .

    KW_VAR          reduce using rule 21 (kw -> KW_DIV .)
    KW_PUSH         reduce using rule 21 (kw -> KW_DIV .)
    KW_POP          reduce using rule 21 (kw -> KW_DIV .)
    KW_RET          reduce using rule 21 (kw -> KW_DIV .)
    KW_ADD          reduce using rule 21 (kw -> KW_DIV .)
    KW_SUB          reduce using rule 21 (kw -> KW_DIV .)
    KW_MUL          reduce using rule 21 (kw -> KW_DIV .)
    KW_DIV          reduce using rule 21 (kw -> KW_DIV .)
    KW_DUP          reduce using rule 21 (kw -> KW_DIV .)
    KW_SWAP         reduce using rule 21 (kw -> KW_DIV .)
    KW_PRINTTOP     reduce using rule 21 (kw -> KW_DIV .)
    KW_PRINTSTACK   reduce using rule 21 (kw -> KW_DIV .)
    KW_LBL          reduce using rule 21 (kw -> KW_DIV .)
    KW_CALL         reduce using rule 21 (kw -> KW_DIV .)
    KW_JMP          reduce using rule 21 (kw -> KW_DIV .)
    KW_JE           reduce using rule 21 (kw -> KW_DIV .)
